# OdooTestLauncherV1.0

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cli/: __init__.py  docker_ops.py  exceptions.py  history.py  logger.py  main.py  manifest.py  template_renderer.py  utils.py
config/: default_manifest.yml
docker/: compose.community.yml.j2  compose.enterprise.yml.j2
docs/: usage.md
odoo_addons/loomworks_operator_light/: __manifest__.py
odoo_addons/loomworks_operator_light/models/: __init__.py  operator_session.py
odoo_addons/loomworks_operator_light/security/: ir.model.access.csv
odoo_addons/loomworks_operator_light/views/: operator_session_views.xml
scripts/: __init__.py  inject_enterprise_code.py  run_smoke_tests.sh  wait_for_odoo.py
seeds/basic/: base.sql
tests/e2e/: test_init_command.py
tests/smoke/: test_cli_help.py
tests/unit/: test_history.py  test_manifest.py  test_utils.py
